--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,9 +1,9 @@
 .card {
-  padding: 20px 20px;
-  width: calc(100% - 40px);
-  max-width: 500px;
+  padding: 2em 2em;
   background-color: #fff;
-  background-color: yellow;
-  border: 1px solid #000;
-  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 10px;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
