Make it more grid-ish with flex-direction column

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,5 +10,8 @@ body {
 
 .grid {
   display: flex;
-  align-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1rem;
+  max-height: 100vh;
 }
