--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -2,9 +2,6 @@
   padding: 2em 2em;
   background-color: #fff;
   border-radius: 10px;
-  min-width: 200px;
-  display: flex;
-  flex-direction: column;
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
-  margin: 1em;
+  display: inline-block;
 }
