--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,7 +1,9 @@
 .card {
-  padding: 2em 2em;
+  padding: 1.4em 1.4em;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   display: inline-block;
+  vertical-align: top;
+  margin: 1em;
 }
