--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,7 @@
 @import "../Heading/styles.css";
 @import "../Weather/styles.css";
 @import "../WeatherIcon/styles.css";
+@import "../DailyInfo/styles.css";
 @import "../InputField/styles.css";
 
 body {
