--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,8 +1,8 @@
 .card {
-  padding: 1.4em 1.4em;
+  padding: 1.3em 1.3em;
   background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
+  border-radius: 1.1em;
+  box-shadow: 0 4px 8px 0 hsla(0, 0%, 0%, 0.2);
   display: inline-block;
   vertical-align: top;
   margin: 1em;
