--- a/src/components/InputField/styles.css
+++ b/src/components/InputField/styles.css
@@ -1,10 +1,8 @@
 input {
   box-sizing: border-box;
-  height: 4em;
   width: 100%;
   vertical-align: middle;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 0.4em;
   border-radius: 0.5em;
   outline: 0;
   border: 2px solid gainsboro;
