--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,47 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-size: 16px;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
 :root {
   --color-darkest-night: hsl(220, 75%, 10%);
   --color-gray-5: hsl(220, 16%, 20%);
@@ -22,6 +63,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--color-gray-1);
+  padding: 2em;
 }
 
 img {
