--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,17 @@
 @import "../WeatherIcon/styles.css";
 @import "../DailyInfo/styles.css";
 @import "../InputField/styles.css";
+@import "../DailyBest/styles.css";
+@import "../DailyWorst/styles.css";
 
-body {
-  padding: 3em;
+.grid {
+  display: flex;
+  gap: 2em;
+}
+
+.grid-column {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  width: 24%;
 }
