--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,9 +1,9 @@
 .card {
   padding: 1.2em 1.2em;
   background-color: #fff;
-  border-radius: 0.8em;
+  border-radius: 0.7em;
   box-shadow: 0 4px 8px 0 hsla(0, 0%, 0%, 0.2);
-  display: inline-block;
+  /* display: inline-block;
   vertical-align: top;
-  margin: 1em;
+  margin: 1em; */
 }
