--- a/src/components/InputField/styles.css
+++ b/src/components/InputField/styles.css
@@ -5,20 +5,21 @@ input {
   padding: 0.4em;
   border-radius: 0.5em;
   outline: 0;
-  border: 2px solid gainsboro;
+  background-color: var(--color-background);
+  border: 1px solid var(--color-background);
 }
 
 input::placeholder {
   font-size: 1rem;
   font-family: "Inter", sans-serif;
-  color: darkgrey;
+  color: var(--color-placeholder);
 }
 
 input:hover {
-  border: 2px solid darkgrey;
+  border: 1px solid var(--color-border-hover);
 }
 
 input:focus {
   outline: none;
-  border-color: #1fb6ff;
+  border-color: var(--color-border-hover);
 }
