Make sure list components has a fixed height

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,6 +6,9 @@
 @import "../InputField/styles.css";
 @import "../DailyBest/styles.css";
 @import "../DailyWorst/styles.css";
+@import "../DailyActions/styles.css";
+@import "../DailyInfo/styles.css";
+@import "../SickLeave/styles.css";
 
 .grid {
   display: flex;
