Add first boilerplate version for stats component

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,6 +9,7 @@
 @import "../DailyActions/styles.css";
 @import "../DailyInfo/styles.css";
 @import "../SickLeave/styles.css";
+@import "../StatsOne/styles.css";
 
 .grid {
   display: flex;
