Add feather icons, cleaned up style for list component

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,7 @@
 @import "../DailyInfo/styles.css";
 @import "../SickLeave/styles.css";
 @import "../StatsOne/styles.css";
+@import "../List/styles.css";
 
 .grid {
   display: flex;
