--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -2,8 +2,5 @@
   padding: 1.8em 1.8em;
   background-color: #fff;
   border-radius: 0.7em;
-  box-shadow: 0 1px 2.2px hsla(227, 35%, 6%, 0.06),
-    0 3px 6px hsla(227, 35%, 6%, 0.06), 0 4px 10px hsla(227, 35%, 6%, 0.06),
-    0 8px 18px hsla(227, 35%, 6%, 0.06), 0 16px 32px hsla(227, 35%, 6%, 0.06),
-    0 36px 80px hsla(227, 35%, 6%, 0.06);
+  box-shadow: 0 4px 8px hsla(227, 35%, 6%, 0.1);
 }
