Fix input postition to bottom of card

--- a/src/components/DailyActions/styles.css
+++ b/src/components/DailyActions/styles.css
@@ -3,4 +3,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+}
+
+.daily-action-list-container {
+  overflow: hidden;
+}
+
+.daily-action-input {
+  position: absolute;
+  bottom: 1em;
 }
