--- a/src/components/InputField/styles.css
+++ b/src/components/InputField/styles.css
@@ -7,6 +7,8 @@ input {
   outline: 0;
   background-color: var(--color-background);
   border: 1px solid var(--color-background);
+  position: absolute;
+  bottom: 0;
 }
 
 input::placeholder {
