--- a/src/components/DailyInfo/styles.css
+++ b/src/components/DailyInfo/styles.css
@@ -1,5 +1,6 @@
 .daily-info-container {
   height: 10em;
+  width: 10em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
