--- a/src/components/InputField/styles.css
+++ b/src/components/InputField/styles.css
@@ -5,14 +5,14 @@ input {
   padding: 0.4em;
   border-radius: 0.5em;
   outline: 0;
-  background-color: var(--color-background);
-  border: 1px solid var(--color-background);
+  border: 1px solid hsla(232, 40%, 40%, 0.6);
   position: absolute;
   bottom: 0;
+  font-size: 0.9em;
 }
 
 input::placeholder {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: "Inter", sans-serif;
   color: var(--color-placeholder);
 }
