--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,32 @@ select {
 :root {
   --color-background: hsl(60, 10%, 92%);
   --color-heading: hsl(232, 33%, 3%);
-  --color-subheading: hsla(232, 33%, 20%, 0.8);
+  --color-subheading: hsla(232, 33%, 10%, 0.8);
   --color-border-hover: hsl(222, 50%, 80%);
-  --color-placeholder: hsl(227, 56%, 60%);
-  --color-light-gray: hsla(232, 24%, 80%, 0.9);
+  --color-placeholder: hsl(227, 18%, 60%);
+  --color-light-gray: hsla(232, 10%, 80%, 0.9);
+
+  --color-light-gray-border: rgba(32, 33, 37, 0.18);
+
+  --color-grey-darkest: #404040;
+  --color-grey-darker: #838383;
+  --color-grey-dark: #acacac;
+  --color-grey: #e6e6e6;
+  --color-grey-light: #e9ebed;
+  --color-grey-lighter: #f0f1f3;
+  --color-grey-lightest: #f7f8f9;
+  --color-blue: #009de0;
+  --color-dark-blue: #009de0;
+  --color-light-blue: #0aa1e1;
+  --color-superlight-blue: #29ade5;
+  --color-bright-blue: #0aa1e1;
+  --color-primary-blue: #009de0;
+  --color-primary: var(--color-blue);
+  --color-disabled: #46474d;
+  --color-success: #1fc70a;
+  --color-info: var(--color-blue);
+  --color-warning: #f78e1f;
+  --color-danger: #f93a25;
 }
 
 body {
